tests/test_assets/semantics/arrays/pass/string_initializer.cog
name: u8[6] = "hello";

empty: u8[1] = "";

newline: u8[3] = "a\n";