tests/test_assets/semantics/arrays/fail/string_initializer_escape.cog
name: u8[3] = "a\x";